--- a/toyo/assets/scss/layout.scss
+++ b/toyo/assets/scss/layout.scss
@@ -121,6 +121,7 @@ section{
 		.page-body{
 			min-height: 450px;
 			margin-bottom: 20px;
+			padding: 15px 0;
 			background-color: rgba($white,0.75);
 
 			h5{
@@ -136,4 +137,11 @@ section{
 			}
 		}
 	}
+}
+
+#map {
+	display: block;
+	max-width: 780px;
+	width: 100%;
+	height: 420px;
 }
