--- a/toyo/assets/css/styles.css
+++ b/toyo/assets/css/styles.css
@@ -5534,9 +5534,8 @@ section .page {
 
 #map {
   display: block;
-  max-width: 780px;
   width: 100%;
-  height: 420px; }
+  height: 460px; }
 
 #quickmenu {
   position: absolute;
@@ -5645,33 +5644,6 @@ section .page {
       #home-news ul li:hover {
         opacity: 1; }
 
-.dealers-search {
-  display: block;
-  width: 100%; }
-  .dealers-search .search-box {
-    display: block;
-    border: 1px solid #3d8fc8;
-    background-color: #3d8fc8;
-    background-image: url(../img/search.png);
-    background-size: 16px;
-    background-position: 304px 10px;
-    background-repeat: no-repeat; }
-    .dealers-search .search-box input {
-      width: 89%;
-      padding: 5px 8px;
-      border: 0;
-      font-size: 18px;
-      outline: 0; }
-  .dealers-search .search-result {
-    display: none;
-    margin-top: 20px;
-    padding: 70px 0;
-    background-color: #fff;
-    border: 1px solid #3d8fc8;
-    text-align: center; }
-    .dealers-search .search-result p#branch {
-      font-size: 28px; }
-
 ul.size-select {
   display: block;
   padding: 0;
@@ -5687,21 +5659,24 @@ ul.size-select {
         color: #3d8fc8; }
 
 .size-options {
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+  height: 332px;
   /* stop the floating after the list */
   /* anchor styling */ }
   .size-options ul {
-    overflow-x: auto;
-    overflow-y: hidden;
-    width: 420px;
-    height: 332px;
+    display: inline-block;
     padding: 0;
+    margin-top: 20px;
     list-style: none;
     /* room for 3 columns */ }
   .size-options ul li {
-    float: left;
-    width: 90px;
+    display: block;
+    width: 120px;
     margin-bottom: 20px;
     margin-left: 0px;
+    text-align: center;
     font-size: 18px;
     /* accommodate the widest item */ }
   .size-options br {
@@ -5709,11 +5684,10 @@ ul.size-select {
   .size-options ol li a {
     display: block;
     width: 7em; }
-  .size-options ul li:hover {
-    background-color: #fff; }
   .size-options ul li a:hover {
     color: #000;
-    /* white */ }
+    font-weight: bold;
+    text-decoration: underline !important; }
 
 .title {
   font-size: 20px;
@@ -5749,3 +5723,6 @@ ul.size-select {
   /*when navigating through the items using the arrow keys:*/
   background-color: DodgerBlue !important;
   color: #ffffff; }
+
+.p0 {
+  padding: 0 !important; }
