--- a/toyo/assets/scss/component.scss
+++ b/toyo/assets/scss/component.scss
@@ -151,7 +151,7 @@
             &:not(:last-child) {
                 margin-bottom: 5px;
             }
-
+ 
             &:hover {
                 opacity: 1;
             }
@@ -159,41 +159,7 @@
     }
 }
 
-.dealers-search {
-    display: block;
-    width: 100%;
 
-    .search-box {
-        display: block;
-        border: 1px solid $blue;
-        background-color: $blue;
-        background-image: url(../img/search.png);
-        background-size: 16px;
-        background-position: 304px 10px;
-        background-repeat: no-repeat;
-
-        input {
-            width: 89%;
-            padding: 5px 8px;
-            border: 0;
-            font-size: 18px;
-            outline: 0;
-        }
-    }
-
-    .search-result {
-        display: none;
-        margin-top: 20px;
-        padding: 70px 0;
-        background-color: $white;
-        border: 1px solid $blue;
-        text-align: center;
-
-        p#branch {
-            font-size: 28px;
-        }
-    }
-}
 
 ul.size-select{
 	display: block;
@@ -215,21 +181,24 @@ ul.size-select{
 }
 
 .size-options {
+	overflow-x: auto;
+	overflow-y: hidden;
+    width: 100%;
+    height: 332px;
     ul {
-    	overflow-x: auto;
-    	overflow-y: hidden;
-        width: 420px;
-        height: 332px;
+    	display: inline-block;
         padding: 0;
+        margin-top: 20px;
         list-style: none;
         /* room for 3 columns */
     }
 
     ul li {
-        float: left;
-        width: 90px;
+    	display: block;
+        width: 120px;
         margin-bottom: 20px;
         margin-left: 0px;
+        text-align: center;
         font-size: 18px;
         /* accommodate the widest item */
     }
@@ -246,12 +215,10 @@ ul.size-select{
 	  width: 7em;
 	  // text-decoration: none;
 	}
-	ul li:hover
-	{
-	  background-color: #fff;
-	}
 	ul li a:hover
 	{
-	  color: $black; /* white */
+	  color: $black;
+	  font-weight: bold;
+	  text-decoration: underline!important;
 	}
 }
