--- a/toyo/assets/scss/layout.scss
+++ b/toyo/assets/scss/layout.scss
@@ -119,7 +119,8 @@ section{
 		}
 
 		.page-body{
-			min-height: 450px;
+			// min-height: 450px;
+			min-height: 33vw;
 			margin-bottom: 20px;
 			padding: 15px 0;
 			background-color: rgba($white,0.75);
@@ -184,5 +185,16 @@ form{
 
     .right-nav{
         right:0;
+    }
+}
+
+.slick-list{
+    .slick-track{
+        div.slick-slide{
+            img{
+                width:100%;
+                height: auto;
+            }
+        } 
     }
 }
